[metadata]
name = cast
version = 1.0.0
author = Maxim Menshikov
author_email = maxim@menshikov.org
description = Build Microchip Studio projects from compile commands file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maximmenshikov/cast
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6